# GD32F470_Project

./: CMakeLists.txt  CMakePresets.json  GD32F470VET6_FLASH.ld  startup_gd32f407_427.s  stlink_gd32f470.cfg
Core/Src/: Function.c  main.c
cmake/: gcc-arm-none-eabi.cmake  starm-clang.cmake
